# kiro-ai-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  README_EN.md  index.html  package-lock.json  package.json  pyproject.toml
.agents/skills/kiro-ai-project-template/agents/: openai.yaml
.agents/skills/testing-lithos-hero/: SKILL.md
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: kiro-ai-project-template-instincts.yaml
.claude/skills/kiro-ai-project-template/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: ci.yml
.kiro/hooks/: doc-sync.yml  security-check.yml  spec-validate.yml  test-trigger.yml
.kiro/shared/: python-excludes.yml
.kiro/specs/: 01-architecture.md  02-implementation.md  03-security.md
.kiro/specs/examples/: 01-image-classifier-architecture.md  02-image-classifier-implementation.md
.kiro/steering/: project.md
.kiro/templates/: hook-template.yml  spec-template.md
docs/: workflow-guide.md
scripts/: create-hook.sh  create-spec.sh
src/: App.tsx  index.css
src/components/: Hero.tsx
src/data/: __init__.py  dataset.py  preprocessing.py
src/inference/: __init__.py  predictor.py
src/models/: __init__.py  base.py  registry.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  config.py  logging.py  metrics.py
tests/: test_config.py  test_dataset.py  test_logging.py  test_metrics.py  test_models.py  test_predictor.py  test_preprocessing.py  test_trainer.py
